2007-03-24 [colin]	0.2.0cvs50

	* src/poppler_viewer.c
		Fix back scroll when searching

2007-03-24 [colin]	0.2.0cvs49

	* src/poppler_viewer.c
		Handle search when zoomed, scroll to result (not perfect yet)

2007-03-24 [iwkse]	0.2.0cvs48

	* src/poppler_viewer.c
			* fix selection: no more rainbows

2007-03-24 [iwkse]	0.2.0cvs47

	* src/poppler_viewer.c
			*fixed rainbow selection

2007-03-23 [iwkse]	0.2.0cvs46

	* src/poppler_viewer.c
			extract fpdf_viewer_render_selection
			from the search function.

2007-03-23 [iwkse]	0.2.0cvs45

	* src/poppler_viewer.c
			We want to use poppler but
			our plugin will be PdfViewer

2007-03-23 [iwkse]	0.2.0cvs44

	* src/poppler_viewer.c
			* add Text Search function, thanks to
			colin, and krh from #poppler!

2007-03-15 [iwkse]	0.2.0cvs43

	* src/poppler_viewer.c
			Fix problem with spin & poppler_view_pdf_update

2007-03-07 [paul]	0.2.0cvs42

	* configure.ac
	* src/poppler_viewer.c
		don't depend on poppler 0.5.4, be
		backwards compatible
		Thanks to Colin

2007-03-06 [iwkse]	0.2.0cvs41

	* configure.ac
			check for poppler glib >= 0.5.4

2007-03-06 [colin]	0.2.0cvs40

	* src/poppler_viewer.c
		Add warning about unhandled link types

2007-03-06 [colin]	0.2.0cvs39

	* src/poppler_viewer.c
		Figure out named links in addition to xyz links

2007-03-06 [colin]	0.2.0cvs38

	* src/poppler_viewer.c
		Finish the index thing

2007-03-06 [wwp]	0.2.0cvs37

	* src/poppler_viewer.c
		Fix a typo introduced in 0.2.0cvs36.

2007-03-06 [wwp]	0.2.0cvs36

	* src/poppler_viewer.c
		Rework the button bar into a gtk_table.
		Factorize code a bit using macros.

2007-03-05 [iwkse]	0.2.0cvs35

	* src/poppler_viewer.c
			Remove useless widgets.
			A better index layout

2007-03-05 [iwkse]	0.2.0cvs34

	* src/poppler_viewer.c
			fix toggle button state on a new document view

2007-03-05 [iwkse]	0.2.0cvs33

	* src/Makefile.am
	* src/poppler_viewer.c
			A close button is removed
			Added a toggle button

2007-03-05 [iwkse]	0.2.0cvs32

	* src/Makefile.am