@@ -1,3 +1,8 @@
+2007-03-24 [colin]	0.2.0cvs51
+
+	* src/poppler_viewer.c
+		Handle rotation
+
 2007-03-24 [colin]	0.2.0cvs50
 
 	* src/poppler_viewer.c
